Fixed a bug with long labels overlapping while wrapping.

--- a/saw-web/src/main/javascript/app/modules/analyze/components/chart/settings/analyze-chart-settings.component.scss
+++ b/saw-web/src/main/javascript/app/modules/analyze/components/chart/settings/analyze-chart-settings.component.scss
@@ -23,7 +23,6 @@ analyze-chart-settings {
     .md-list-item-inner {
       padding-left: 0;
       min-height: 38px;
-      height: 38px;
 
       span {
         font-size: 14px;
@@ -34,6 +33,7 @@ analyze-chart-settings {
       md-checkbox {
         margin-right: 5px;
         margin-bottom: 5px;
+        margin-top: 0;
 
         &[disabled] ~ span {
           color: #C1C1C1;
@@ -41,12 +41,16 @@ analyze-chart-settings {
 
         .md-label {
           display: inline-block !important;
-          width: 160px;
+          width: 150px;
           white-space: normal;
           word-wrap: normal;
           word-break: break-word;
         }
       }
+    }
+
+    md-icon {
+      margin-left: 10px;
     }
   }
 
